--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -8334,84 +8334,120 @@ textarea.model-search-box input {
   padding: 20px;
   background-color: #292929;
 }
-.page-polls-show .poll-form label {
+.page-polls-show,
+.widget-polls {
+  line-height: normal !important;
+}
+.page-polls-show p,
+.widget-polls p {
+  margin-top: 10px;
+}
+.page-polls-show .poll-form label,
+.widget-polls .poll-form label {
   padding: 10px;
   cursor: pointer;
 }
-.page-polls-show .poll-form input {
+.page-polls-show .poll-form input,
+.widget-polls .poll-form input {
   display: none;
 }
 .page-polls-show .poll-form .styled-radio,
-.page-polls-show .poll-form .styled-checkbox {
+.widget-polls .poll-form .styled-radio,
+.page-polls-show .poll-form .styled-checkbox,
+.widget-polls .poll-form .styled-checkbox {
   display: inline-block;
   width: 20px;
   height: 20px;
   margin-right: 10px;
-  border: 1px solid #00afff;
   vertical-align: bottom;
 }
-.page-polls-show .poll-form .styled-radio {
+.page-polls-show .poll-form .styled-radio,
+.widget-polls .poll-form .styled-radio {
+  border: 1px solid #00afff;
   border-radius: 10px;
 }
-.page-polls-show .poll-form input[type="radio"]:checked + .styled-radio {
+.page-polls-show .poll-form .styled-checkbox,
+.widget-polls .poll-form .styled-checkbox {
+  outline: 1px solid #00afff /* Use outline instead of border to avoid problems with the height of the ::before part */;
+}
+.page-polls-show .poll-form input[type="radio"]:checked + .styled-radio,
+.widget-polls .poll-form input[type="radio"]:checked + .styled-radio {
   background-color: #00afff;
 }
-.page-polls-show .poll-form input[type="checkbox"]:checked + .styled-checkbox::before {
+.page-polls-show .poll-form input[type="checkbox"]:checked + .styled-checkbox::before,
+.widget-polls .poll-form input[type="checkbox"]:checked + .styled-checkbox::before {
   background-color: #00afff;
 }
-.page-polls-show .poll-form input[type="checkbox"]:checked + .styled-checkbox::before {
+.page-polls-show .poll-form input[type="checkbox"]:checked + .styled-checkbox::before,
+.widget-polls .poll-form input[type="checkbox"]:checked + .styled-checkbox::before {
   display: inline-block;
   width: 20px;
   content: '✓';
   text-align: center;
 }
-.page-polls-show .poll-results li {
+.page-polls-show .poll-results li,
+.widget-polls .poll-results li {
   padding: 10px;
 }
-.page-polls-show .poll-result {
+.page-polls-show .poll-result,
+.widget-polls .poll-result {
   height: 10px;
   background-color: #02C39A;
 }
-.page-polls-show .poll-result.result-number-2 {
+.page-polls-show .poll-result.result-number-2,
+.widget-polls .poll-result.result-number-2 {
   background-color: #EDAE49;
 }
-.page-polls-show .poll-result.result-number-3 {
+.page-polls-show .poll-result.result-number-3,
+.widget-polls .poll-result.result-number-3 {
   background-color: #00798C;
 }
-.page-polls-show .poll-result.result-number-4 {
+.page-polls-show .poll-result.result-number-4,
+.widget-polls .poll-result.result-number-4 {
   background-color: #f032e6;
 }
-.page-polls-show .poll-result.result-number-5 {
+.page-polls-show .poll-result.result-number-5,
+.widget-polls .poll-result.result-number-5 {
   background-color: #fabebe;
 }
-.page-polls-show .poll-result.result-number-6 {
+.page-polls-show .poll-result.result-number-6,
+.widget-polls .poll-result.result-number-6 {
   background-color: #DDF9C1;
 }
-.page-polls-show .poll-result.result-number-7 {
+.page-polls-show .poll-result.result-number-7,
+.widget-polls .poll-result.result-number-7 {
   background-color: #8A2BE2;
 }
-.page-polls-show .poll-result.result-number-8 {
+.page-polls-show .poll-result.result-number-8,
+.widget-polls .poll-result.result-number-8 {
   background-color: #9A6324;
 }
-.page-polls-show .poll-result.result-number-9 {
+.page-polls-show .poll-result.result-number-9,
+.widget-polls .poll-result.result-number-9 {
   background-color: #F9A03F;
 }
-.page-polls-show .poll-result.result-number-10 {
+.page-polls-show .poll-result.result-number-10,
+.widget-polls .poll-result.result-number-10 {
   background-color: #4363d8;
 }
-.page-polls-show .poll-result.result-number-11 {
+.page-polls-show .poll-result.result-number-11,
+.widget-polls .poll-result.result-number-11 {
   background-color: #bfef45;
 }
-.page-polls-show .poll-result.result-number-12 {
+.page-polls-show .poll-result.result-number-12,
+.widget-polls .poll-result.result-number-12 {
   background-color: #e6beff;
 }
-.page-polls-show .poll-result.result-number-13 {
+.page-polls-show .poll-result.result-number-13,
+.widget-polls .poll-result.result-number-13 {
   background-color: #D1495B;
 }
-.page-polls-show .poll-result.result-number-14 {
+.page-polls-show .poll-result.result-number-14,
+.widget-polls .poll-result.result-number-14 {
   background-color: #ffe119;
 }
-.page-polls-show .poll-result.result-number-15 {
+.page-polls-show .poll-result.result-number-15,
+.widget-polls .poll-result.result-number-15 {
   background-color: #30638E;
 }
 /*
