Display diagnostic output in groups

--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -354,6 +354,10 @@ ul.pagination {
     .summary { padding: 10px; border: 1px solid #ddd; text-align: right }
 }
 
+.page-diag {
+    th, td { width: 50% }
+}
+
 .editor-flags {
     img { cursor: pointer }
 }
