--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -7764,6 +7764,10 @@ fieldset[disabled] .page-images .image .actions a.active {
   border: 1px solid #ddd;
   text-align: right;
 }
+.page-diag th,
+.page-diag td {
+  width: 50%;
+}
 .editor-flags img {
   cursor: pointer;
 }
