--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -3,6 +3,8 @@
  */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+
+@import (optional) '/../../../../../../storage/app/backend_less_code';
 @import 'bootstrap/bootstrap';
 @import 'shared';
 
