Added minimal GDPR support. Set version to beta.

--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -224,6 +224,11 @@ ul.pagination {
     word-wrap: break-word;
 }
 
+#gdpr-alert {
+    display: flex; align-items: center; justify-content: space-between; position: fixed; left: 0; right: 0; bottom: 0; margin: 0; z-index: 999;
+    .btn { border: 1px solid @text-color; float: right; }
+}
+
 /*
  * Modules
  */
